tests/baselines/reference/assigningFromObjectToAnythingElse.errors.txt
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(3,1): error TS2322: Type 'Object' is not assignable to type 'RegExp'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Index signature is missing in type 'RegExp'.
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(5,31): error TS2558: Expected 0 type arguments, but got 1.
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(6,31): error TS2558: Expected 0 type arguments, but got 1.
tests/cases/compiler/assigningFromObjectToAnythingElse.ts(8,5): error TS2322: Type 'Object' is not assignable to type 'Error'.
  The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
    Index signature is missing in type 'Error'.


==== tests/cases/compiler/assigningFromObjectToAnythingElse.ts (4 errors) ====
    var x: Object;
    var y: RegExp;
    y = x;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'RegExp'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Index signature is missing in type 'RegExp'.
    
    var a: String = Object.create<Object>("");
                                  ~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    var c: String = Object.create<Number>(1);
                                  ~~~~~~
!!! error TS2558: Expected 0 type arguments, but got 1.
    
    var w: Error = new Object();
        ~
!!! error TS2322: Type 'Object' is not assignable to type 'Error'.
!!! error TS2322:   The 'Object' type is assignable to very few other types. Did you mean to use the 'any' type instead?
!!! error TS2322:     Index signature is missing in type 'Error'.
    